# n8code

./: .gitignore  pyproject.toml
config/: architecture_reference.json  benchmark_targets.json  frontier_baselines.json  phases.json  repro_policy.json
scripts/: create_gh_issues.py  file_bug_issue.py  run_full_pipeline.py
src/agai/: __init__.py  alignment.py  architecture_guard.py  baseline_attestation.py  baseline_ingestion.py  baseline_normalization.py  baseline_patch_template.py  baseline_registry.py  benchmark_tracker.py  cli.py  compute_controller.py  cost_governor.py  direction_tracker.py  distillation.py  evaluation.py  (+27 more)
tests/: test_architecture_guard.py  test_baseline_attestation.py  test_baseline_ingestion.py  test_baseline_normalization.py  test_baseline_patch_template.py  test_baseline_registry.py  test_benchmark_tracker.py  test_cost_compute.py  test_direction_tracker.py  test_external_claim_campaign.py  test_external_claim_campaign_autofill.py  test_external_claim_campaign_draft.py  test_external_claim_campaign_evidence_schema.py  test_external_claim_campaign_readiness.py  test_external_claim_campaign_scaffold.py  test_external_claim_campaign_validator.py  test_external_claim_plan.py  test_external_claim_promotion.py  test_external_claim_replay.py  test_external_claim_sandbox.py  test_hypothesis.py  test_market.py  test_moonshot_tracker.py  test_orchestration.py  test_qec_tools.py  test_quantum_suite.py  test_reality_guard.py  test_release_status.py  test_research_guidance.py  test_runtime.py  test_scale_path.py  test_tool_registry.py  test_types.py
(+3 files in other folders)
